[package]
name = "press-btn-continue"
version = "0.1.1"
authors = ["Carl Fredrik Samson <cf@samson.no>"]
edition = "2018"
repository = "https://github.com/cfsamson/press-btn-continue"
documentation = "https://docs.rs/press_btn_continue/"
readme = "README.md"
license = "MIT"
keywords = ["console", "terminal"]
categories = ["command-line-utilities"]
description = """
A smalll no-dependency library to get a "Press any key to continue" console prompt.
"""

[dependencies]
